<resources>
    <string name="dismiss">Dismiss</string>
   	<string name="delete">Delete</string>
    <string name="call">Call</string>
    <string name="reply">Reply</string>
    <string name="view">View</string>
    <string name="dismiss_all">Dismiss All</string>
    <string name="dismiss_all_dialog_text">This will dismiss all notifications.</string>
    <string name="share">Share</string>
    <string name="share_title">Someone you know wants you to try the Android app Droid Notify!</string>
    <string name="share_description">I\'ve been using this awesome Android application called Droid Notify. It displays a popup dialog on my screen when I receive certain notifications.\n\nYou can download this app on most Android app stores, just search for the keywords \'Droid Notify\'.</string>
	<string name="app_name_basic_formatted_version">Notify Lite v%s</string>
	<string name="app_name_pro_formatted_version">Notify Pro v%s</string>
    <string name="app_name_basic_formatted">Notify Lite</string>
    <string name="app_name_pro_formatted">Notify Pro</string>
    <string name="to_text">To</string>
    <string name="from_text">From</string>
    <string name="close">Close</string>
    <string name="continue_text">Continue</string>
    <string name="dismiss_notification_text">Dismiss Notification</string>
    <string name="reset_data">Resetting data&#8230;</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="colon">:</string>
    <string name="appenabled_title">Enable Droid Notify</string>
   	<string name="appenabled_summary">Enable the application.</string>
   	<string name="upgrade">Upgrade</string>
   	<string name="upgrade_to_pro">Upgrade to Pro</string>
    <string name="upgrade_description_text">This feature is only available in the pro version. If you would like to upgrade now and purchase the pro version please click on the button below.</string>
    <string name="upgrade_no_market_description_text">This feature is only available in the pro version. Please upgrade the app to access this feature.</string>
    <string name="upgrade_to_droid_notify_pro_text">Upgrade to Pro</string>
    <string name="upgrade_to_droid_notify_pro_text_summary">Upgrade to Droid Notify Pro. Unlock the full potential of this application.</string>
    <string name="upgrade_now_text">Upgrade Now</string>
    <string name="upgrade_direct_description_text">Please consider upgrading to the pro version of this app. If you would like to upgrade now and purchase the pro version please click on the button below.\n\nYour support helps make the continued development and addition of new features possible.\n\nThank You!</string>
    <string name="app_android_messaging_app_error">The Android Messaging application could not be started.</string>
	<string name="app_android_phone_app_error">The Android Phone application could not be started.</string>
	<string name="app_android_call_log_error">The Android Call Log application could not be started.</string>
    <string name="app_android_calendar_app_error">The Android Calendar application could not be started.</string>
    <string name="app_android_email_app_error">The Android Email application could not be started.</string>
    <string name="app_android_contacts_app_error">The Android Contacts application could not be started.</string>
    <string name="app_android_quick_reply_app_error">The Quick Reply application could not be started.</string>
    <string name="app_android_rate_app_error">The Web application could not be started.</string>
    <string name="app_android_message_not_found_error">The selected message could not be found.</string>
    <string name="app_android_phone_number_format_error">The phone number does not appear to be valid. Dialing number failed.</string>
    <string name="app_android_reply_messaging_address_error">The messaging address does not appear to be valid. Reply to message failed.</string>
    <string name="app_android_contact_not_found_error">The selected contact could not be found.</string>
    <string name="app_android_calendar_event_not_found_error">The selected calendar event could not be found.</string>
    <string name="app_android_messaging_unknown_error">Unknown Messaging App error.</string>
    <string name="app_android_phone_unknown_error">Unknown Phone Call error.</string>
    <string name="app_android_calendar_unknown_error">Unknown Calendar App error.</string>
    <string name="app_android_email_unknown_error">Unknown Email App error.</string>
    <string name="app_android_contacts_unknown_error">Unknown Contacts App error.</string>
    <string name="app_android_contacts_phone_number_chooser_error">Error querying the contacts available phone numbers.</string>
    <string name="app_android_contacts_email_chooser_error">Error querying the contacts available email addresses.</string>
    <string name="app_android_no_number_found_error">No phone number could be found for this contact.</string>
    <string name="app_android_calendars_not_found_error">No calendars could be found on your phone.</string>
    <string name="app_reply_email_address_error">The email address does not appear to be valid. Reply to email failed.</string>
    <string name="app_email_app_error">The email application could not be started.</string>
    <string name="app_tts_error">The Text-To-Speech service could not be started.</string>
    <string name="app_preference_quiet_time_error">The Quiet Time preference could not be started.</string>
    <string name="twitter_app_error">The Twitter application could not be started.</string>
    <string name="twitter_app_not_found_error">The Twitter application could not be found. Try selecting a different preferred Twitter client.</string>
    <string name="facebook_app_error">The Facebook application could not be started.</string>
    <string name="facebook_app_not_found_error">The Facebook application could not be found. Try selecting a different preferred Facebook client.</string>
    <string name="app_quick_reply_address_error">The quick reply address does not appear to be valid. Quick Reply launch failed.</string>
    <string name="twitter_send_direct_mesage_error">The Twitter Direct Message could not be sent.</string>
    <string name="twitter_send_tweet_error">The Tweet/Status Update could not be sent.</string>
    <string name="not_online_error">The application cannot gain online access at this time. Please try again later.</string>
    <string name="url_link_not_found_error">The URL link could not be found.</string>
    <string name="browser_app_error">The web browser application could not be started.</string>
    <string name="add_to_blacklist_error">The blacklist item could not be added.</string>
    <string name="google_voice_app_error">The Google Voice application could not be started.</string>
    <string name="google_voice_app_not_found_error">The Google Voice application could not be found. Try selecting a different preferred Google Voice client.</string>
 	<string name="google_voice_authentication_error">We were not able to authenticate your Google account at this time. Please try again later.</string>
    <string name="google_voice_send_sms_mesage_error">The Google Voice SMS Message could not be sent.</string>
    <string name="voice_recognizer_error">The voice recognizer could not be started. Please ensure that your phone supports voice recognition.</string>
    <string name="preference_disable_context_menu_title">Disable Context Menu</string>
    <string name="preference_disable_context_menu_summary">Disable the context menu that is attached to notification headers.</string>
    <string name="preference_disable_quick_contact_title">Disable Photo Menu</string>
    <string name="preference_disable_quick_contact_summary">Disable the quick contact menu that is attached to notification photos.</string>
    <string name="popup_horizontal_location_title">Popup Horizontal Location</string>
    <string name="popup_horizontal_location_summary">Select horizontal location of the window.</string>
    <string name="top">Top</string>
    <string name="center">Center</string>
    <string name="bottom">Bottom</string>
    <string name="preference_popup_width_padding_title">Popup Width Padding</string>
    <string name="preference_popup_width_padding_summary">Select the window width padding amount.</string>
    <string name="package_not_found">Package Not Found</string>
    <string name="package_k9_not_found">We cannot find the required K-9 email client installed on this device. Please download a compatible K-9 email client. Click on one of the buttons below to download a compatible client.</string>
    <string name="package_k9_not_found_generic">We cannot find the required K-9 email client installed on this device. Please download a compatible K-9 email client.</string>
    <string name="k9_mail">K-9 Mail</string>
    <string name="kaiten_mail">Kaiten Mail</string>
	<string name="preference_debug_log_title">Turn On Debug Mode</string>
	<string name="preference_debug_log_summary">When in debug mode the application will log diagnostic information.</string>
    <string name="confirm_delete_entry">This will delete the entry.</string>
    <string name="delete_message_dialog_text">This will delete the message from the phone.</string>
    <string name="delete_thread_dialog_text">The entire thread will be deleted from the phone.</string>
    <string name="delete_email_dialog_text">This will delete the email from the phone.</string>
    <string name="delete_twitter_direct_message_dialog_text">This will delete the direct message from your Twitter account.</string>
    <string name="delete_facebook_notification_dialog_text">This will delete the notification from your Facebook account.</string>
    <string name="delete_facebook_message_dialog_text">This will delete the message from your Facebook account.</string>
    <string name="delete_google_voice_message_dialog_text">This will move the message to your Google Voice trash.</string>
   	<string name="identifier">Identifier</string>
    <string name="settings">Settings</string>
    <string name="general_category">GENERAL</string>
    <string name="basic_category">BASIC</string>
    <string name="basic">Basic</string>
    <string name="locale">Locale</string>
    <string name="screen">Screen</string>
    <string name="customize">Customize</string>
    <string name="sms_category">SMS</string>
    <string name="missed_calls_category">MISSED CALLS</string>
    <string name="k9_category">K9</string>
    <string name="notifications">Notifications</string>
    <string name="status_bar_notification_privacy_title">Status Bar Notification Privacy</string>
	<string name="status_bar_notification_privacy_summary">Do not display private information in the status bar notifications.</string>
    <string name="sms_mesage_privacy">SMS Message Privacy</string>
	<string name="sms_mesage_privacy_summary">Do not display the SMS message in the notification popup. A button will be displayed and must be clicked to view the message.</string>
    <string name="email_mesage_privacy">Email Message Privacy</string>
	<string name="email_mesage_privacy_summary">Do not display the email message in the notification popup. A button will be displayed and must be clicked to view the message.</string>
    <string name="missed_call_privacy">Missed Call Privacy</string>
	<string name="missed_call_privacy_summary">Do not display the missed call information in the notification popup. A button will be displayed and must be clicked to view the call log.</string>
    <string name="advanced_category">ADVANCED</string>
    <string name="advanced">Advanced</string>
    <string name="feedback_category">FEEDBACK</string>
    <string name="rate_app">Rate App</string>
    <string name="email_developer">Email Developer</string>
    <string name="about_category">ABOUT</string>
   	<string name="about">About</string>
</resources>