<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:key="privacy_settings_screen">	
	<PreferenceCategory
		android:layout="@layout/custom_preference_category"
		android:key="general_category"
		android:title="@string/general_category">
		<CheckBoxPreference
			android:layout="@layout/custom_preference_checkbox"
			android:key="status_bar_notification_privacy_enabled" 
			android:title="@string/status_bar_notification_privacy_title" 
			android:summary="@string/status_bar_notification_privacy_summary"
			android:defaultValue="false" />
	</PreferenceCategory>
	<PreferenceCategory
		android:layout="@layout/custom_preference_category"
		android:key="sms_category"
		android:title="@string/sms_category">
		<CheckBoxPreference
			android:layout="@layout/custom_preference_checkbox"
			android:key="sms_message_privacy_enabled" 
			android:title="@string/sms_mesage_privacy" 
			android:summary="@string/sms_mesage_privacy_summary"
			android:defaultValue="false" />
	</PreferenceCategory>
	<PreferenceCategory
		android:layout="@layout/custom_preference_category"
		android:key="missed_calls_category"
		android:title="@string/missed_calls_category">
		<CheckBoxPreference
			android:layout="@layout/custom_preference_checkbox"
			android:key="missed_call_privacy_enabled" 
			android:title="@string/missed_call_privacy" 
			android:summary="@string/missed_call_privacy_summary"
			android:defaultValue="false" />
	</PreferenceCategory>
	<PreferenceCategory
		android:layout="@layout/custom_preference_category"
		android:key="k9_category"
		android:title="@string/k9_category">
		<CheckBoxPreference
			android:layout="@layout/custom_preference_checkbox"
			android:key="email_message_privacy_enabled" 
			android:title="@string/email_mesage_privacy" 
			android:summary="@string/email_mesage_privacy_summary"
			android:defaultValue="false" />
	</PreferenceCategory>
</PreferenceScreen>